# rfi-matcher

./: .gitignore  MANIFEST.in  README.md  export_meerkat_archive_custom.py  login.py  meerkat_scraper.py  pyproject.toml  requirements.txt  rf_scraper.py  rfi-matcher.py
data/: ITU_RA_Observatories.csv
examples/: example.ipynb  get_rfi.py
examples/data/: rfi_data.csv  satellites.tle
model/: archive_dictionary.py  filter_builder.py  telescopes.py
model/data_archives/: data_archive.py  meerkat_data_archive.py  nrao_data_archive.py
src/: filter_builder.py
src/data_archives/: archive_dictionary.py  data_archive.py  meerkat_data_archive.py
src/rfi-matcher/: meerkat_scraper.py  rf_scraper.ipynb  rfi-matcher.py
src/rfi-matcher/custom/: my_tle_fetcher_base.py  my_tle_fetcher_spacetrack.py
src/rfi-matcher/model/: filter_builder.py  rfi_filter.py  skyfield_utils.py  sopp_iface.py  sopp_utils.py  time_utils.py  utils.py
src/rfi-matcher/model/data_archives/: data_archive.py  meerkat_api.py  meerkat_data_archive.py  nrao_data_archive.py
src/rfi_matcher/: rfi_matcher.py
src/rfi_matcher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rfi_matcher/custom/: my_tle_fetcher_spacetrack.py
src/rfi_matcher/data/: reference_config.json  satellites.tle
src/rfi_matcher/model/: rfi_filter.py  sopp_iface.py
src/rfi_matcher/model/data_archives/: __init__.py  data_archive.py  meerkat_data_archive.py  nrao_data_archive.py
src/rfi_matcher/utils/: skyfield_utils.py  sopp_utils.py  time_utils.py
tests/: test_filter_builder.py  test_utils.py
